# InterviewAceTrainee

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTEXT.md  README.md  docker-compose.yml  操作手册.md  需求文档.md
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  mvnw.cmd  pom.xml  pyproject.toml  requirements.txt
Backend/app/: __init__.py  main.py
Backend/app/api/: __init__.py  admin.py  auth.py  dependencies.py  health.py  interview_materials.py  interview_products.py  interviews.py  providers.py  session_guards.py  speech.py  speech_realtime.py  websocket.py
Backend/app/cli/: compare_capability_retrieval.py  (+4 more)
Backend/migrations/: env.py
Backend/tests/: test_admin_dashboard_cache.py  test_admin_user_operations.py  test_admin_users.py  test_admin_vouchers.py  test_ai_call_logs.py  test_ai_router.py  test_auth.py  test_auth_business.py  test_business_defaults.py  test_capacity_gate.py  test_credit_balances.py  test_credit_service.py  test_database_models.py  test_email_codes.py  test_email_rate_limits.py  test_health.py  test_interview_capability_retrieval.py  test_interview_flow.py  test_interview_materials.py  test_interview_products.py  test_interview_quality.py  test_interview_quality_gate.py  test_interview_quality_observer.py  test_interview_vouchers.py  test_interviews.py  test_llm_gateway.py  test_mailers.py  test_provider_api.py  test_provider_config_store.py  test_safe_migrate.py  test_security_boundaries.py  test_security_controls.py  test_system_configs.py  test_tencent_speech.py  test_user_credentials.py  test_websocket.py
(+1064 files in other folders)
