[project]
name = "mianba-backend"
version = "0.1.0"
description = "FastAPI backend for the Mianba AI interview platform."
readme = "../需求文档.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.0",
    "email-validator>=2.3.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.3.0",
    "pydantic-settings>=2.8.0",
    "pwdlib[argon2]>=0.2.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.2.0",
    "resend>=2.30.1",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.29",
    "pypdf>=6.12.1",
    "python-docx>=1.2.0",
    "tencentcloud-sdk-python>=3.1.101",
    "websockets>=16.0",
]
